--- a/coworking-marketplace/package.json
+++ b/coworking-marketplace/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
+    "css": "^3.0.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
